[package]
name = "kftdi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
nusb = { git = "https://github.com/korbin/nusb.git", features = ["tokio"] }
regex = "~1.11"
tokio = { version = "1.35.1", features = ["full"] }
clap = { version = "4.4.18", features = ["cargo"] }
tokio-retry = "0.3.0"
async-trait = "*"
